fix gc log collection in start-server.sh scripts